Added planning with dynamics examples

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -11,13 +11,13 @@
     "\n",
     "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update: 11/25/2019\n",
+    "Last update: 1/9/2020\n",
     "\n",
     "\n",
     "Table of Contents\n",
     "=================\n",
     "\n",
-    "* [Preface](Preface.ipynb)\n",
+    "* [Preface](Preface.ipynb) **90% complete**\n",
     "\n",
     "* Section I. Introduction\n",
     "  * [Chapter 1. What is robotics?](WhatIsRobotics.ipynb)\n",
@@ -29,27 +29,41 @@
     "  * [Chapter 4. 3D rotations](3DRotations.ipynb)\n",
     "  * [Chapter 5. Robot kinematics](Kinematics.ipynb)\n",
     "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb)\n",
-    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **75% complete**\n",
+    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **text 90% complete, figures 60% complete**\n",
     "\n",
     "* Section III. Motion Planning\n",
     "\n",
-    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **75% complete**\n",
+    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **text 95% complete, figures 80% complete**\n",
     "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **85% complete**\n",
-    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **90% complete**\n",
-    "  * [Chapter 11. Extensions to basic planning](ExtensionsToMotionPlanning.ipynb) **incomplete**\n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **text 95% complete, figures 80% complete**\n",
+    "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 85% complete, figures 70% complete**\n",
+    "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **incomplete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
     "\n",
-    "  * [Chapter 12. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **75% complete**\n",
-    "  * [Chapter 13. Robot dynamics](RobotDynamics.ipynb) **incomplete**\n",
-    "  * [Chapter 14. Stabilizing controlled systems](Control.ipynb) **50% complete**\n",
-    "  * [Chapter 15. Control of articulated robots](RobotControl.ipynb) **85% complete**\n",
-    "  * [Chapter 16. Optimal control](OptimalControl.ipynb) **50% complete**\n",
+    "  * [Chapter 13. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **Text 90% complete, figures 70% complete**\n",
+    "  * [Chapter 14. Robot dynamics](RobotDynamics.ipynb) **incomplete**\n",
+    "  * [Chapter 15. Stabilizing controlled systems](Control.ipynb) **50% complete**\n",
+    "  * [Chapter 16. Control of articulated robots](RobotControl.ipynb) **text 95% complete, figures 75% complete**\n",
+    "  * [Chapter 17. Optimal control](OptimalControl.ipynb) **text 95% complete, figures 0% complete**\n",
     "\n",
     "* Section V. Perception **incomplete**\n",
+    "  * Chapter 18.  State estimation\n",
+    "  * Chapter 19.  3D Mapping\n",
+    "  * Chapter 20.  Image processing\n",
+    "  * Chapter 21.  Computer vision\n",
     "\n",
     "* Section VI. Learning and Calibration **incomplete**\n",
-    "  * [Chapter 21. Calibration](Calibration.ipynb) **60% complete**\n",
+    "  * [Chapter 22. Calibration](Calibration.ipynb) **text 75% complete, figures 40% complete**\n",
+    "  * Chapter 23. Function approximation **incomplete**\n",
+    "  * Chapter 24. Supervised machine learning **incomplete**\n",
+    "  * Chapter 25. Reinforcement learning **incomplete**\n",
+    "\n",
+    "* Section VII. Robotic Systems in Practice **incomplete**\n",
+    "   * Chapter 26. System integration\n",
+    "   * Chapter 27. Systems engineering\n",
+    "   * Chapter 28. Human-robot interaction\n",
+    "   * Chapter 29. Applications\n",
     "\n",
     "* Appendix A. Mathematical Preliminaries\n",
     "\n",
@@ -61,7 +75,7 @@
     "\n",
     "  * [B.1. Numerical errors](NumericalErrors.ipynb)\n",
     "  * [B.2. Matrix computations](MatrixComputations.ipynb) **20% complete**\n",
-    "  * [B.3. Optimization](Optimization.ipynb) **80% complete**\n",
+    "  * [B.3. Optimization](Optimization.ipynb) **text 80% complete, needs figures**\n",
     "\n",
     "* Appendix C. Computational methods \n",
     "\n",
@@ -72,9 +86,9 @@
     "About\n",
     "=================\n",
     "\n",
-    "This book is a work in progress!  The source material is my lecture notes from courses at Indiana University and Duke University, which are progressively being converted to Jupyter Notebook and HTML format.\n",
+    "This book is a work in progress!  The source material is my lecture notes from courses at Indiana University, Duke University, and University of Illinois at Urbana-Champaign, which are progressively being converted to Jupyter Notebook and HTML format. \n",
     "\n",
-    "The conversion tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at [kris.hauser@duke.edu](mailto:kris.hauser@duke.edu).  Or better yet, make the corrections in the notebook directly and [issue a Git pull request](https://help.github.com/articles/about-pull-requests/).\n",
+    "The conversion tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at [kkhauser@illinois.edu](mailto:kkhauser@illinois.edu).  Or better yet, make the corrections in the notebook directly and [issue a Git pull request](https://help.github.com/articles/about-pull-requests/).\n",
     "\n",
     "\n",
     "Enabling the interactive Jupyter Notebook\n",
@@ -93,7 +107,7 @@
     "On most systems (Linux, Windows, OSX), the Klamp't Python API can be installed using `pip` as follows:\n",
     "\n",
     "```bash\n",
-    "pip install Klampt\n",
+    "pip install klampt\n",
     "```\n",
     "\n",
     "(Note that the Klamp't source is the most up-to-date way to install Klamp't, and is mostly pain-free on Linux and OSX platforms. )\n",
