--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -720,97 +720,7 @@
     "can be computed using Minkowski sums, and then its cell decomposition\n",
     "computed. Then, an edge is added to connect cells on adjacent layers\n",
     "whose $(x,y)$ projections overlap. This layered cell graph can then be\n",
-    "searched to connect any two points in SE(2).\n",
-    "\n",
-    "### Path planning with curvature constraints\n",
-    "\n",
-    "We have not yet described how a path could be followed. Supposing the\n",
-    "robot was reasonably shaped like a disk, and could move forward and turn\n",
-    "in place (e.g., a mobile robot with differential drive such as the\n",
-    "iRobot Roomba, or a skid steer) any 2D polygonal path could be followed\n",
-    "by a sequence of forward motions and turns. This strategy could also be\n",
-    "followed by humanoid robots performing indoor navigation. If the robot\n",
-    "were not disk-shaped, but could still move forward and turn in place, we\n",
-    "could perform planning in SE(2) and follow the path just as easily.\n",
-    "\n",
-    "However, for car-like ground vehicles and aerial vehicles, turning in\n",
-    "place is not an option. The limited turning radius of the vehicle means\n",
-    "that at maximum steering angle, the path follows a circular arc. No path\n",
-    "of smaller turning radius is permitted (a vertex of a polygonal path can\n",
-    "be thought of as a circular arc of radius 0). This places a *constraint\n",
-    "on the maximum curvature* of the path. There are three general\n",
-    "approaches for handling such constraints:\n",
-    "\n",
-    "-   Expand C-obstacles by the turning radius, and plan a path. This is\n",
-    "    only appropriate if the turning radius is small compared to the size\n",
-    "    of narrow passages between obstacles.\n",
-    "\n",
-    "-   Plan paths with straight line segments connected by minimum-radius\n",
-    "    arcs. The [Reeds-Shepp curves](#WhatAreDynamicsAndControl.ipynb#Dubins-car) can beextended to handle obstacle\n",
-    "    avoidance in some simple cases.\n",
-    "\n",
-    "-   Define a set of curvature-constrained primitive maneuvers, and\n",
-    "    perform search.\n",
-    "\n",
-    "\n",
-    "Here we will expand on the latter approach, since it is quite commonly\n",
-    "used for autonomous vehicles and can also be adapted to handle lane\n",
-    "following and other dynamic constraints. The state lattice approach\n",
-    "defines a search graph on an $(x,y\\theta)$ grid in which each connection\n",
-    "corresponds to a *primitive maneuver* guaranteed to satisfy the\n",
-    "curvature constraint. Each maneuver may move more than one unit along\n",
-    "each axis. Usually, only a few values of $\\theta$ (4 or 8) are allowed\n",
-    "to take advantage of rotational symmetries in the $(x,y)$ grid.\n",
-    "\n",
-    "****************\n",
-    "\n",
-    "![fig:Lattice4](figures/planning/lattice4.svg)\n",
-    "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Lattice4\">Figure 9</a>.\n",
-    "A state lattice for a curvature constrained vehicle, with 4 possible\n",
-    "orientation values. Shown are the reachable states after one, two, and\n",
-    "three primitives.\n",
-    "    </div>\n",
-    "\n",
-    "****************\n",
-    "\n",
-    "[Fig. 9](#fig:Lattice4) illustrates this concept. From an initial\n",
-    "state pointing upward, five primitive maneuvers are allowed. These are\n",
-    "chosen so that curvature constraints are respected and no more than 1\n",
-    "grid cell is moved in any direction. After executing one maneuver, the\n",
-    "vehicle can perform the same five maneuvers, properly translated and\n",
-    "rotated to the vehicle's new position. This can be executed as a search\n",
-    "on a grid $(x_i,y_j,\\theta_k)$ where the orientation $\\theta_k$ can take\n",
-    "on the values $\\{0^\\circ,90^\\circ,180^\\circ,270^\\circ\\}$. A primitive\n",
-    "$p$ is stored relative to the origin (where the vehicle points\n",
-    "rightward) as $(\\Delta x, \\Delta y, \\Delta \\theta)$, and the application\n",
-    "of the primitive in state $(x,y,\\theta)$ yields a new state:\n",
-    "$$\\begin{aligned}\n",
-    "(&x+\\cos \\theta \\Delta x - \\sin \\theta \\Delta y,\\\\\n",
-    " &y+\\sin \\theta \\Delta x + \\cos \\theta \\Delta y,\\\\\n",
-    " & (\\theta + \\Delta \\theta) \\mod 360^\\circ).\n",
-    "\\end{aligned}$$ This is then used as the successor function for a search\n",
-    "like Dijkstra's or A\\*.\n",
-    "\n",
-    "It should be noted that due to the coarse discretization of the\n",
-    "orientation variable, to move diagonally the vehicle must swerve\n",
-    "frequently. It is possible to extend this approach to more finely\n",
-    "discretized orientations, but care must be taken to define primitive\n",
-    "sets that transfer properly between integer cell coordinates for\n",
-    "non-axis aligned orientation values.  See the figure below for an illustration.\n",
-    "\n",
-    "****************\n",
-    "\n",
-    "![fig:Lattice8](figures/planning/lattice8.svg)\n",
-    "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Lattice8\">Figure 10</a>.\n",
-    "    A state lattice for a curvature constrained vehicle, with 8 possible\n",
-    "orientation values. Shown are the axis-aligned primitive set (left) and\n",
-    "the non-axis aligned set\n",
-    "(right).\n",
-    "    </div>\n",
-    "\n",
-    "****************"
+    "searched to connect any two points in SE(2)."
    ]
   },
   {
