--- a/MatrixComputations.ipynb
+++ b/MatrixComputations.ipynb
@@ -13,7 +13,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Equation solving"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Method of least-squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Eigendecomposition\n",
+    "\n",
     "\n",
     "## Singular value decomposition\n",
     "\n",
@@ -27,27 +42,19 @@
     "$m \\times m$ matrix with zero entries on all of the off-diagonals, and\n",
     "the diagonal containing only nonnegative entries.\n",
     "\n",
-    "The SVD can be used for many purposes, but in this book we use it\n",
+    "The SVD can be used for many purposes:\n",
+    "- Calculating matrix rank\n",
+    "- Calculating a pseudoinverse\n",
+    "- Dimensionality reduction\n",
+    "- Least-squares equation solving\n",
+    "\n",
+    "In this book we use it\n",
     "primarily for calculating the matrix pseudoinverse $A^+$. Once the SVD\n",
     "is computed, the pseudoinverse $\\Sigma^+$ of $\\Sigma$ can be computed by\n",
     "taking the reciprocal of all nonzero diagonal entries of $\\Sigma$, and\n",
     "leaving the zero entries. Then the pseudoinverse of $A$ is\n",
     "$A^+ = V \\Sigma^+ U^T$. It is an exercise to convince yourself that this\n",
     "solution indeed satisfies the properties of the pseudoinverse."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Equation Solving"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Method of Least-Squares"
    ]
   },
   {
