--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -6,7 +6,17 @@
    "source": [
     "# Section III. MOTION PLANNING\n",
     "    \n",
-    "# Chapter 10. Motion Planning in Higher Dimensions\n"
+    "# Chapter 10. Motion Planning in Higher Dimensions\n",
+    "\n",
+    "<style>\n",
+    "div.figcaption {    \n",
+    "    text-align: center;\n",
+    "    margin-left:1em;\n",
+    "    margin-top:1em;\n",
+    "    margin-right:1em;\n",
+    "    margin-bottom:1em;\n",
+    "    }\n",
+    "</style>"
    ]
   },
   {
@@ -423,7 +433,7 @@
     "successfully finding a path increases as $N$ increases. After a \"burn\n",
     "in\" phase with low $N$ where there is no change of finding a solution,\n",
     "the probability of success rises fairly sharply before tapering off. The\n",
-    "slope of this tapering off depends on the visibility characteristics of\n",
+    "slope of this tapering off depends Ron the visibility characteristics of\n",
     "the problem, which we shall discuss below.\n",
     "\n",
     "The average time needed for incremental PRM to solve a given problem\n",
