--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -182,7 +182,7 @@
     "chosen to maintain a balance between convergence speed and avoiding\n",
     "divergence. Note that $\\alpha_t$ may depend on the step $t$.\n",
     "\n",
-    "### Choosing a step size using line search\n",
+    "#### Choosing a step size using line search\n",
     "\n",
     "To a first-order approximation, each step decreases the value of $f$ by\n",
     "approximately $\\alpha_t ||\\nabla f(\\V{x_0})||^2$. If $\\alpha_t$ is too\n",
@@ -218,7 +218,7 @@
     "useful during analysis to assume that optimal line searches are being\n",
     "performed.\n",
     "\n",
-    "### Pathological cases\n",
+    "#### Pathological cases\n",
     "\n",
     "It can be proven, through a relatively technical proof, that gradient\n",
     "descent with an optimal line search obtains a linear convergence.\n",
@@ -252,7 +252,7 @@
     "said to have an *ill-conditioned* Hessian matrix. We will make this more\n",
     "precise in future lectures.\n",
     "\n",
-    "### Variants\n",
+    "#### Variants\n",
     "\n",
     "Gradient descent can be generalized to spaces that involve a discrete\n",
     "component. The method of *steepest descent* is the discrete analogue of\n",
@@ -368,8 +368,8 @@
     "\n",
     "Let us again examine the case where $g(x)$ is a single scalar, i.e., $m=1$. There are two options for $x$ to be a critical point. Either:\n",
     "1. $\\nabla f(x) = 0$ in an interior point ($g(x) > 0$), or\n",
-    "2. $x$ is a boundary point ($g(x) = 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) + \\mu \\nabla g(x) = 0$ for some $\\mu$. \n",
-    "Note that we are using a different symbol for the Lagrange multiplier.  If we want the point to be a minimizer, we also require that $\\mu > 0$ needs to hold (otherwise, $f$ can be reduced by moving toward the interior of the feasible set).\n",
+    "2. $x$ is a boundary point ($g(x) = 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) - \\mu \\nabla g(x) = 0$ for some $\\mu$. \n",
+    "Note that we are using a different symbol for the Lagrange multiplier.  If we want the point to be a minimizer, we also include a minus sign in the Langrangian derivative, and require that $\\mu > 0$ needs to hold.  Otherwise, $f$ can be reduced by moving toward the interior of the feasible set.\n",
     "\n",
     "This set of options could be analyzed one-by-one to characterize all critical points.  But as we add more dimensions to $g$, the options become unwieldy. Consider the $m=2$ case, $g(x) = [g_1(x),g_2(x)]$.  Either\n",
     "1. $\\nabla f(x) = 0$ in an interior point ($g_1(x) > 0$ and $g_2(x) > 0$), or\n",
@@ -380,7 +380,7 @@
     "In general, for $m$ constraints there are $2^m$ possible combinations of conditions.  To compress this into a more digestible form, the KKT conditions write the conditions as follows:\n",
     "\n",
     "$$\\begin{gathered}\n",
-    "\\nabla f(x) + \\mu^T \\nabla g(x) = 0 \\\\\n",
+    "\\nabla f(x) - \\mu^T \\nabla g(x) = 0 \\\\\n",
     "g(x) \\geq 0 \\\\\n",
     "\\mu \\geq 0 \\\\\n",
     "\\mu^T g(x) = 0\n",
@@ -392,7 +392,7 @@
     "\n",
     "$$\n",
     "\\begin{gathered}\n",
-    "\\nabla f(x) + \\mu^T \\nabla g(x) + \\lambda^T \\nabla h(x)= 0 \\\\\n",
+    "\\nabla f(x) - \\mu^T \\nabla g(x) + \\lambda^T \\nabla h(x)= 0 \\\\\n",
     "g(x) \\geq 0 \\\\\n",
     "h(x) = 0 \\\\\n",
     "\\mu \\geq 0 \\\\\n",
