--- a/Preface.ipynb
+++ b/Preface.ipynb
@@ -23,8 +23,8 @@
     "once only evaluated in labs are becoming field-tested in the real world,\n",
     "and new problems are emerging as society poses novel applications for robots.\n",
     "\n",
-    "The purpose of this book is to provide students with the seed to a\n",
-    "career developing the next generation of intelligent robots. These\n",
+    "The purpose of this book is to help launch a student's career toward\n",
+    "developing the next generation of intelligent robots. These\n",
     "robots will be integrated into humans' daily lives, will understand and\n",
     "react to the world around them, and will perform tasks reliably.\n",
     "Robotics is however a complex and interdisciplinary field that spans\n",
@@ -115,12 +115,12 @@
     "\n",
     "Latombe, Choset et al on motion planning.\n",
     "\n",
-    "Thrun on mapping\n",
+    "Thrun and Burgard on state estimation and mapping\n",
     "\n",
     "Springer Handbook of Robotics, Siciliano and Khatib.\n",
     "\n",
-    "Conferences and journals: ICRA, IROS, IJRR, IEEE TRO, Auro, RSS. Speciality conferences: HRI,\n",
-    "SSRR, ISRR, ISER, IJFR.\n",
+    "Conferences and journals: ICRA, IROS, IJRR, IEEE TRO, Auro, RSS, RA-L. Speciality conferences: HRI,\n",
+    "SSRR, ISRR, ISER, WAFR, IJFR, CoRL.\n",
     "\n",
     "## Notes for students\n",
     "\n",
@@ -169,7 +169,7 @@
     "\n",
     "Code for the programming exercises in this book are available in the\n",
     "[Python](http://python.org) programming language, using the [Klamp't](http://klampt.org) robotics software package\n",
-    "(as of writing, on version 0.7). This package supports modeling,\n",
+    "(as of writing, on version 0.8.1). This package supports modeling,\n",
     "visualization, simulation, and planning for a wide variety of robots.\n",
     "Klamp't has been publicly available since 2014, and is cross-platform,\n",
     "supporting Mac, Windows, and Linux, and also has a web-based interface.\n",
@@ -223,7 +223,7 @@
     "curve of ROS with its esoteric semantics and hundreds of packages. The\n",
     "advantage of using Klamp't is that it provides a unified API for\n",
     "simulation and much of the \"under-the-hood stuff\" that is so important\n",
-    "to learn in robotics — e.g., [kinematics](2_3_kinematics.ipynb), dynamics, and planning. In my\n",
+    "to learn in robotics — e.g., [kinematics](Kinematics.ipynb), [dynamics](RobotDynamics.ipynb), and [planning](MotionPlanningInHigherDimensions.ipynb). In my\n",
     "experience, only having to learn one software package tends to make it\n",
     "easier for students to digest the theory. Programming exercises in\n",
     "Klamp't corresponding to each chapter are provided with the book's\n",
@@ -241,21 +241,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
