--- a/WhatIsRobotics.ipynb
+++ b/WhatIsRobotics.ipynb
@@ -44,7 +44,8 @@
     "anti-lock braking, cruise control, and airbag deployment using several\n",
     "computers and sensors to monitor fuel efficiency, tire pressure,\n",
     "velocity, seat occupancy, etc. Yet, we are not ready to call it a robot\n",
-    "just yet[$^{[1]}$](#footnote1).\n",
+    "just yet<sup><a href=\"#footnote1\">[1]</a></sup>.\n",
+    "\n",
     "\n",
     "Let us propose a couple of other possible criteria to call a system a\n",
     "robot. What about if a robot were required to:\n",
@@ -67,12 +68,17 @@
     "the 1950's, our modern washing machines and cars are actually quite\n",
     "smart! Perhaps as the control and artificial intelligence technology\n",
     "used in robots becomes more widely adopted, the line dividing robot and\n",
-    "non-robot machines will become blurrier and blurrier\\... until the term\n",
+    "non-robot machines will become blurrier and blurrier... until the term\n",
     "\"robot\" has lost its meaning.\n",
     "\n",
     "Overall, it may be a pointless exercise to extract a precise definition\n",
     "of robot. In any case, the layperson's \"I know a robot when I see one\"\n",
     "should suffice for the purposes of this book.\n",
+    "\n",
+    "-------------------------------------------------------\n",
+    "<a name=\"#footnote1\"></a>\n",
+    "<sup>[1]</sup>: Presumably, by time of publication, self-driving cars are not yet widely commercially available.\n",
+    "\n",
     "\n",
     "How to Develop a Robot\n",
     "----------------------\n",
@@ -183,10 +189,7 @@
     "\n",
     "-   Is up-to-date on current design tools, hardware, software,\n",
     "    algorithms, and programming languages used in robotics.\n",
-    "\n",
-    "### Footnotes\n",
-    "\n",
-    "<a name=\"footnote1\">[1]:</a> Presumably, by time of publication, self-driving cars are not yet widely commercially available."
+    "\n"
    ]
   },
   {
@@ -199,21 +202,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
