--- a/Control.ipynb
+++ b/Control.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Section IV. DYNAMICS AND CONTROL\n",
     "    \n",
-    "# Chapter 14. Stabilizing Controlled Dynamical Systems"
+    "# Chapter 15. Stabilizing Controlled Dynamical Systems"
    ]
   },
   {
@@ -375,14 +375,14 @@
     "\n",
     "-   Time delay\n",
     "\n",
-    "occurs when the control is subject to bounds\n",
+    "**Control saturation** occurs when the control is subject to bounds\n",
     "$u_{min} \\leq u \\leq u_{max}$, like minimum/maximum torque, or\n",
     "minimum/maximum throttle. If the PID control produces a value of $u$\n",
     "outside the bounds, it should be clamped to produce a valid value. This\n",
     "clamping will slow down convergence and in some cases, cause\n",
     "instability.\n",
     "\n",
-    "Derivative estimation errors are a problem because derivatives may be\n",
+    "**Derivative estimation** errors are a problem because derivatives may be\n",
     "approximated using finite differencing:\n",
     "$\\dot{x} \\approx \\frac{x(t)-x(t-\\Delta t)}{\\Delta t}$. However, since\n",
     "$\\Delta t$ is small and in the denominator, the derivative is more\n",
@@ -391,7 +391,7 @@
     "precisely and in an irregular fashion. To improve derivative estimation\n",
     "accuracy, a low-pass filter is typically applied to the signal $x(t)$.\n",
     "\n",
-    "Integral wind-up occurs when the control cannot be made large enough to\n",
+    "**Integral wind-up** occurs when the control cannot be made large enough to\n",
     "counteract a steady-state error, such as when the control is saturated.\n",
     "In this case, $I$ proceeds toward infinity, which then causes delays\n",
     "responding to changes in setpoint. Suppose the system reaches a steady\n",
@@ -403,7 +403,7 @@
     "by capping the magnitude of $I$ to ensure bounded controls and\n",
     "sufficiently fast response.\n",
     "\n",
-    "Finite control frequency can cause instability when gains are stiff in a\n",
+    "**Finite control frequency** can cause instability when gains are stiff in a\n",
     "manner similar to errors in Euler integration. The control computed at\n",
     "one time step is applied for $\\Delta t$ time in the continuous dynamics\n",
     "of the system. The controller cannot respond to changes faster than this\n",
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
