--- a/WhatAreDynamicsAndControl.ipynb
+++ b/WhatAreDynamicsAndControl.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Section IV. DYNAMICS AND CONTROL\n",
     "    \n",
-    "# Chapter 12. What are Dynamics and Control?"
+    "# Chapter 13. What are Dynamics and Control?"
    ]
   },
   {
@@ -577,7 +577,7 @@
     "This control accelerates the system to the point $(p,v)=(0.5,1)$ at\n",
     "$t=1$, and then decelerates to $(1,0)$ at $t=2$. We shall see more\n",
     "general ways of designing such control functions using the optimal\n",
-    "control methods when we discuss [optimal control](OptimalControl.ipynb).\n",
+    "control methods presented in [later chapters](OptimalControl.ipynb).\n",
     "\n",
     "### Pendulum swing-up\n",
     "\n",
@@ -883,7 +883,7 @@
     "disturbed from the true value by $\\epsilon_m$ such that\n",
     "$\\hat{m} = m + \\epsilon_m$. If we construct the augmented state vector\n",
     "$(p,v,m)\\in \\mathbb{R}^3$, then the state follows dynamics\n",
-    "$$\\dot{x} \\equiv \\begin{bmatrix}\\dot{p} \\\\ \\dot{v} \\\\ \\dot{m} \\end{bmatrix} = f(x,u) = \\begin{bmatrix} v \\\\ f/m 0 \\end{bmatrix}.$$\n",
+    "$$\\dot{x} \\equiv \\begin{bmatrix}\\dot{p} \\\\ \\dot{v} \\\\ \\dot{m} \\end{bmatrix} = f(x,u) = \\begin{bmatrix} v \\\\ f/m \\\\ 0 \\end{bmatrix}.$$\n",
     "Hence, the modeling error is equivalent to the state uncertainty vector\n",
     "$$\\epsilon_x = \\begin{bmatrix} 0 \\\\ 0 \\\\ \\hat{m}-m \\end{bmatrix}.$$\n",
     "\n",
@@ -1008,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
