Fixed some weird output

--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -376,21 +376,21 @@
     "\n",
     "<a name=\"alg:PRM\">Algorithm Incremental-PRM(s,g,T)</a>\n",
     "1. $V \\gets \\{ s, g \\}$.\n",
-    "* $E \\gets \\{ \\}$.\n",
-    "* $CC[s] \\gets \\{s\\}$.\n",
-    "* $CC[g] \\gets \\{g\\}$.\n",
-    "* **while** time-elapsed $< T$ **do**\n",
-    "* &nbsp;&nbsp;&nbsp;$q \\gets Sample()$\n",
-    "* &nbsp;&nbsp;&nbsp;**if** not Feasible($q$) return to Line 3.\n",
-    "* &nbsp;&nbsp;&nbsp;Add $q$ to $V$\n",
-    "* &nbsp;&nbsp;&nbsp;$CC[q] \\gets \\{q\\}$\n",
-    "* &nbsp;&nbsp;&nbsp;**for** all $p \\in near (q,V)$\n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** Visible($p,q$) **then**\n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(p,q)$ to $E$.\n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Merge $CC[p]$ and $CC[q]$\n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $g \\in CC[s]$ \n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**return** the shortest path in $G = (V,E)$ between $s$ and $g$. \n",
-    "* **return** \"no path\"\n",
+    "2. $E \\gets \\{ \\}$.\n",
+    "3. $CC[s] \\gets \\{s\\}$.\n",
+    "4. $CC[g] \\gets \\{g\\}$.\n",
+    "5. **while** time-elapsed $< T$ **do**\n",
+    "6. &nbsp;&nbsp;&nbsp;$q \\gets Sample()$\n",
+    "7. &nbsp;&nbsp;&nbsp;**if** not Feasible($q$) return to Line 3.\n",
+    "8. &nbsp;&nbsp;&nbsp;Add $q$ to $V$\n",
+    "9. &nbsp;&nbsp;&nbsp;$CC[q] \\gets \\{q\\}$\n",
+    "10. &nbsp;&nbsp;&nbsp;**for** all $p \\in near (q,V)$\n",
+    "11. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** Visible($p,q$) **then**\n",
+    "12. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(p,q)$ to $E$.\n",
+    "13. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Merge $CC[p]$ and $CC[q]$\n",
+    "14. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $g \\in CC[s]$ \n",
+    "15. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**return** the shortest path in $G = (V,E)$ between $s$ and $g$. \n",
+    "16. **return** \"no path\"\n",
     "\n",
     "****************\n",
     "\n",
