Typo in 2R jacobian

--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1042,9 +1042,9 @@
     "$$\\frac{\\partial \\V{x}}{\\partial q_1}(\\V{q}) = \\begin{bmatrix}{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2} \\\\ {c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} \\end{bmatrix}.$$\n",
     "The second column is the partial derivative with respect to $q_2$,\n",
     "keeping $q_1$ constant:\n",
-    "$$\\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}) = \\begin{bmatrix}{c_1(L_1 - s_2 L_2) - s_1 c_2 L_2} \\\\ {s_1(L_1 - s_2 L_2) - c_1 c_2 L_2} \\end{bmatrix}.$$\n",
+    "$$\\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}) = \\begin{bmatrix}{-c_1 s_2 L_2 - s_1 c_2 L_2} \\\\ {- s_1 s_2 L_2 + c_1 c_2 L_2} \\end{bmatrix}.$$\n",
     "Overall, the Jacobian matrix is a $2\\times 2$ matrix as follows:\n",
-    "$$J(\\V{q}) = \\begin{bmatrix}{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2} & {- c_1 s_2 L_2 - s_1 c_2 L_2} \\\\ {c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} & {s_1 s_2 L_2 - c_1 c_2 L_2} \\end{bmatrix}.$$\n",
+    "$$J(\\V{q}) = \\begin{bmatrix}{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2} & {- c_1 s_2 L_2 - s_1 c_2 L_2} \\\\ {c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} & {-s_1 s_2 L_2 + c_1 c_2 L_2} \\end{bmatrix}.$$\n",
     "Observe that the first column is simply a vector perpendicular to\n",
     "$\\V{x}$ with the same magnitude. The second column is a bit more\n",
     "challenging to interpret, but with a bit of scrutiny it can be seen as a\n",
