--- a/Preface.ipynb
+++ b/Preface.ipynb
@@ -71,7 +71,7 @@
     "techniques and skills. Because the field changes so rapidly, the student\n",
     "who learns a single platform runs the risk of sparse opportunities in\n",
     "that area when finishing their studies. Being stuck on a stale\n",
-    "application will hamper one's ability to spark insights with with\n",
+    "application will hamper one's ability to spark insights with\n",
     "colleagues, seeking a job, or starting a company. As a result, the\n",
     "topics in this book are curated to generalize across platforms, like\n",
     "mobile robots, autonomous vehicles, industrial manipulators, humanoid\n",
@@ -95,10 +95,10 @@
     "technical areas: Mathematical Models, Motion Planning, Dynamics and\n",
     "Control, Perception, Learning and Calibration, and Systems Engineering.\n",
     "(Columns and book sections are not in one-to-one correspondence; the\n",
-    "modeling column is split between several sections). The material covered\n",
+    "modeling column is split between several sections.) The material covered\n",
     "by the book attempts to survey a mixture of classical, \"tried and true\"\n",
     "topics as well as modern topics that verge on the state-of-the-art. To\n",
-    "bookend the technical material with broader context, the Introduction to\n",
+    "bookend the technical material with a broader context, the Introduction to\n",
     "Robots section discusses robotics history, and the Application Areas\n",
     "section discusses some of the domain knowledge employed in common\n",
     "robotics applications.\n",
@@ -143,11 +143,11 @@
     "providing a scaffolding of theoretical principles upon which you can\n",
     "build a deeper understanding.\n",
     "\n",
-    "After mastering the topics covered in this this book, you should be\n",
+    "After mastering the topics covered in this book, you should be\n",
     "prepared to dive into the vast wealth of advanced robotics material:\n",
     "technical reports, academic papers, and specialized advanced textbooks.\n",
     "Making a real-world product will also take a large amount of hacking\n",
-    "(or, to say it more more professionally: \"testing, evaluation, and\n",
+    "(or, to say it more professionally: \"testing, evaluation, and\n",
     "development\") to get right.\n",
     "\n",
     "### Prerequisites\n",
@@ -198,7 +198,7 @@
     "    and calibration, system integration.\n",
     "\n",
     "-   Robot system design: intro, modeling, dynamics and control, system\n",
-    "    integration\n",
+    "    integration.\n",
     "\n",
     "-   Robot dynamics and control: intro, modeling, dynamics and control,\n",
     "    learning and calibration.\n",
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
