--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Each of these components is analogous to some component of a biological\n",
     "system. Links are analogous to bones; joints are analogous to, well,\n",
-    "joints; sensors are analogous sensory organs; actuators are analogous to\n",
+    "joints; sensors are analogous to sensory organs; actuators are analogous to\n",
     "muscles, and wires are analogous to nerves. Just as there are millions\n",
     "of biological species with diverse, sometimes exotic external and\n",
     "internal structures, the range of possible robot designs is endless.\n",
@@ -48,7 +48,7 @@
     "| **Pioneer mobile robot**                             | **Honda Asimo humanoid robot**                       |\n",
     "| 1 link (body), 0 joints                              | 72 links (incl. fingers), 26 joints                  |\n",
     "| Actuated by wheels (differential drive)              | Actuated by electrical motors + speaker              |\n",
-    "| Sensors: SICK laser, sonar ,wheel encoders           | Sensors: stereo cameras, joint encoders, gyroscope, inertial measurement unit, foot pressure sensors |\n",
+    "| Sensors: SICK laser, sonar, wheel encoders           | Sensors: stereo cameras, joint encoders, gyroscope, inertial measurement unit, foot pressure sensors |\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:RobotAnatomy\">Figure 1</a>. Two robots with very different \"anatomy\".</div>\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "Joints in robots typically either allow rotation or translation.\n",
     "Rotation usually occurs about a single hinge-joint axis. Ball-and-socket\n",
-    "joints like in the human hip or shoulder are much more rare due to the\n",
+    "joints like in the human hip or shoulder are much rarer due to the\n",
     "difficulty of fabrication, lubrication, and actuation. Translational\n",
     "joints are fairly common in the form of linear slides used in gantries\n",
     "and Cartesian positioning stages, and in pistons used in many hydraulic\n",
@@ -81,7 +81,7 @@
     "provided using lubrication, bearings, or bushings.\n",
     "\n",
     "The links and joints of a robot also make up its outward appearance, and\n",
-    "for some applications significant effort is devoted to designing a\n",
+    "for some applications, significant effort is devoted to designing a\n",
     "pleasing appearance. To an engineer this may seem like a frivolous\n",
     "concern, but the success of a consumer product often rests on the appeal of\n",
     "its design! Robots that are designed for direct human interaction, such\n",
@@ -124,15 +124,15 @@
     "\n",
     "- *Electric motors*: stepper motors, brushed / brushless DC motors, AC motors. \n",
     "\n",
-    "- *Pneumatic actuators*. High variation in size and strength\n",
+    "- *Pneumatic actuators*. High variation in size and strength.\n",
     "\n",
     "- *Hydraulic actuators*. Very strong.  \n",
     "\n",
     "- *Chemical (combustion) actuators*: internal combustion engines in automobiles and prop planes; turbines in jet planes.\n",
     "\n",
-    "- *Piezoelectric actuators*\n",
+    "- *Piezoelectric actuators*.\n",
     "\n",
-    "Actuators can be rotary (revolves around an axis) or linear (translates about an axis).  Each type and model of actuator has many subtle differences that should be taken into account when fine-tuning a robot's design, e.g., in the power source, power / weight ratio, control bandwidth, maximum speed, stroke length, continuous / peak torque, complexity of electronics and maintenance, etc.  Most often, a roboticist will choose between electric, pneumatic, and hydraulic motors.  Electric motors come in a plethora of models with high variation in size, strength, and speed, and are convenient to use. Pneumatic actuators have a higher power-to-weight ratio, and lightweight pistons can be placed on extremities far from from heavy pumps using air lines, but require maintaining complex pump / valve systems.  Hydraulic actuators are stronger and heavier, and have similar drawbacks. \n",
+    "Actuators can be rotary (revolves around an axis) or linear (translates about an axis).  Each type and model of actuator has many subtle differences that should be taken into account when fine-tuning a robot's design, e.g., in the power source, power / weight ratio, control bandwidth, maximum speed, stroke length, continuous / peak torque, complexity of electronics and maintenance, etc.  Most often, a roboticist will choose between electric, pneumatic, and hydraulic motors.  Electric motors come in a plethora of models with high variation in size, strength, and speed, and are convenient to use. Pneumatic actuators have a higher power-to-weight ratio, and lightweight pistons can be placed on extremities far from heavy pumps using air lines, but require maintaining complex pump / valve systems.  Hydraulic actuators are stronger and heavier, and have similar drawbacks. \n",
     "\n",
     "There are also a variety of problems that arise when an actuator is pushed beyond its safe operating limits.  Electric motors *burn out* when the temperature produced by the motor cannot be dissipated quickly enough, and which burns through the insulation on the motor's wiring.  Pneumatic and hydraulic systems can *blow seals* where the internal pressure overcomes the strength of the seals and gaskets on the pneumatic / hydraulic lines or cylinders. In hydraulic systems, leaks can be quite messy!\n",
     "\n",
@@ -150,14 +150,14 @@
     "\n",
     "- *Flywheels*: use changes of angular momentum to control orientation, used primarily in space robotics.\n",
     "\n",
-    "- *Propellers*, *aelierons*, and *control surfaces*: deflect a surrounding gaseous / liquid medium to propel the robot; used primarily for aerial and water vehicles.\n",
+    "- *Propellers*, *aelierons*, and *control surfaces*: deflect a surrounding gaseous / liquid medium to propel the robot, used primarily for aerial and water vehicles.\n",
     "\n",
-    "- *Thrusters*: eject mass at high speed to exert force using Newton's Law. Used primarily in space robotics.\n",
+    "- *Thrusters*: eject mass at high speed to exert force using Newton's Law, used primarily in space robotics.\n",
     "\n",
     "- *Feet*, *hands*, *wings*, etc: bioinspired methods to touch the environment / deflect the surrounding medium to propel the robot.\n",
     "\n",
     "\n",
-    "When  designing or choosing a transmission systems, a designer must be cognizant of the\n",
+    "When  designing or choosing a transmission systems, a designer must be cognizant of the:\n",
     "\n",
     "- *Gear reduction*: force multiplier from input to output.\n",
     "\n",
@@ -214,7 +214,7 @@
     "from one's body at the spinal cord, the sense-plan-act framework views\n",
     "the brain's role as processing the input and output that pass through\n",
     "the nerves at the spinal cord. The brain is a highly developed organ\n",
-    "that processes information, makes decisions, learn, and adapts in such a\n",
+    "that processes information, makes decisions, learns, and adapts in such a\n",
     "way to generate the infinite richness of human behavior. When we program\n",
     "a robot's software, we likewise control the contents and functions of\n",
     "its mind. The question is, how do we construct a mind so that the robot\n",
@@ -260,7 +260,7 @@
     "environment as well as a *performance metric* to choose which course of\n",
     "action is the best. To generate possible future actions in a systematic\n",
     "way, a *planner* computes many potential options and their outcomes. By\n",
-    "maximizing performance a deliberative architecture is designed\n",
+    "maximizing performance, a deliberative architecture is designed\n",
     "explicitly to achieve some notion of *optimality*. (Contrast this with a\n",
     "reflexive device, which can perform well only by coincidence or shrewdly\n",
     "designed rules.) These techniques can generate excellent behaviors if 1)\n",
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
